crates/nash-ir/src/beta/snapshots/nash_ir__beta__tests__partial_application_binds_outside_remaining_lambda.snap
---
source: crates/nash-ir/src/beta/tests.rs
assertion_line: 60
expression: "snapshot(&b, b.app(b.lam(&[x, y], body), &[b.int(40)], ty))"
---
--- core before
(\x#1 : int y#2 : int -> addInteger x#1 y#2) 40
--- core after beta
let x#1 : int = 40 in
\y#2 : int -> addInteger x#1 y#2
--- core after rules 1 + 2
\y#2 : int -> addInteger 40 y#2
